--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
@@ -40,12 +44,53 @@
         <!-- Slides -->
         <div class="swiper-slide">
           <img src="img/diablo-4-bg.jpeg" alt="Diablo" />
+          <div class="backscene"></div>
+          <div class="banner">
+            <div class="left">
+              <div class="features">
+                <div class="rating">
+                  <span class="score">8.9</span>
+                  <div class="content">
+                    <span class="subtitle">Lorem ipsum dolor</span>
+                    <h4>Awesome</h4>
+                    <span>Lorem ipsum</span>
+                  </div>
+                </div>
+                <div class="pricing">
+                  <ion-icon name="add"></ion-icon>
+                  <div class="content">
+                    <span class="subtitle">Lorem ipsum dolor</span>
+                    <h4>Order Now</h4>
+                    <span>Lorem ipsum</span>
+                  </div>
+                </div>
+              </div>
+              <h1>Diablo</h1>
+            </div>
+            <img src="img/diablo-character.png" alt="" />
+            <div class="right"></div>
+          </div>
         </div>
         <div class="swiper-slide">
           <img src="img/god-of-war-bg.jpeg" alt="God of War" />
+          <div class="backscene" style="background: rgba(255, 0, 0, 0.7)"></div>
+          <div class="banner">
+            <div class="left"></div>
+            <img src="img/god-of-war-character.png" alt="" />
+            <div class="right"></div>
+          </div>
         </div>
         <div class="swiper-slide">
           <img src="img/final-fantasy-bg.jpeg" alt="Final Fantasy" />
+          <div
+            class="backscene"
+            style="background: rgba(250, 71, 0, 0.7)"
+          ></div>
+          <div class="banner">
+            <div class="left"></div>
+            <img src="img/final-fantasy-character.png" alt="" />
+            <div class="right"></div>
+          </div>
         </div>
       </div>
       <!-- If we need pagination -->
